--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ owner:
   google_plus:    https://plus.google.com/u/0/117623711152594064565
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics:    UA-69496132-1
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
