--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            TEAM HEIMONEN
 description:      "better to get up and fight"
 logo:             chainwheel.png
-disqus_shortname: heimonen
+disqus_shortname: teamheimonen
 # Assign a default image for your site's header and footer
 default_bg:       GOPR0881.jpg
 search:           true
@@ -62,6 +62,8 @@ links:
     url: /partners
   - title: <i class="icon-wrench"></i> My Gear
     url: /gear
+  - title: <i class="icon-flag-checkered"></i> CCV
+    url: /ccv
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Paris
