--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            TEAM HEIMONEN
-description:      "better to get up and fight"
+description:      "better get up and ride"
 logo:             chainwheel.png
 disqus_shortname: teamheimonen
 # Assign a default image for your site's header and footer
