--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ links-fi:
 timezone:    Europe/Paris
 future:      true
 #was pygments
-highlighter: pygments 
+highlighter: rouge 
 markdown:    kramdown
 paginate:    20
 paginate_path: "page:num"
