Contact info added

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ url:
 owner:
   name:           Pekka Heimonen
   avatar:         avatar.png
-  email:          pekka.heimonen@gmail.com
+  email:          pekka.heimonen(at)gmail.com
+  tel:            +358 40 751 2007
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    I am a two time stroke survivor and a passionate cyclist. I started cycling to recover from the first stroke eight years ago and never looked back. Cycling has been the key element to my recovery. I'm going to make an Hour record attempt on August 2016.
   # Social networking links used in footer. Update and remove as you like.
